--- a/project 1 color chnger/index.html
+++ b/project 1 color chnger/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css">
     <!-- <script src="index.js"></script>  -->
-    <title>JavaScript Background Color Switcher</title>
+    <title>Background Color Switcher</title>
   </head>
   <body>
     <nav>
